--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -423,7 +423,7 @@ div._systemStatus {
           padding-top: 6px;
           font-size: 28px;
           color: #33b1ff;
-          font-weight: 100;
+          //font-weight: 300;
           padding-bottom: 8px;
         }
         > ._contentGroup {
