Resolve several issues with NetWorth Table popups and hovers.

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -468,6 +468,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
           text-align: right;
         }
         > tfoot {
+          > tr > td {padding-top: 4px}
           border-top: 1px solid #aaa;
         }
       }
