--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -128,7 +128,7 @@ table > tbody > tr > td > ._field > div > ._content {
 ._sidebar_group {
   overflow: hidden;
   margin: 25px 11px 25px 11px;
-  background-color: rgba(255,255,255,.8);
+  background-color: rgba(248, 248, 248, 0.8);
   border-radius: 12px;
   box-shadow: 0px 0px 1px rgba(0,0,0,.3), 0px 0px 3px rgba(0,0,0,.15);
   * {color: #777}
@@ -171,7 +171,7 @@ table > tbody > tr > td > ._field > div > ._content {
   right: 0px;
   z-index: 1;
   height: calc(100% - #{$tab-bar-height});
-  background-color: rgba(80,80,80,.2);
+  background-color: rgba(180, 180, 180, 0.2);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   position:fixed!important;
