--- a/code/sass/lib.scss
+++ b/code/sass/lib.scss
@@ -127,7 +127,10 @@ table > tbody > tr > td > ._field > div > ._content {
 
 ._sidebar_group {
   overflow: hidden;
-  margin: 25px 11px 25px 11px;
+  margin: 16px 11px 16px 11px;
+  &:nth-child(2) {
+    margin-top: 25px;
+  }
   background-color: rgba(248, 248, 248, 0.8);
   border-radius: 12px;
   box-shadow: 0px 0px 1px rgba(0,0,0,.3), 0px 0px 3px rgba(0,0,0,.15);
