--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -28,6 +28,45 @@ body > div._blockEverything {
   transition: 400ms opacity;
 }
 
+body > ._search {
+  &._input {
+    z-index: 20000;
+    position: fixed;
+    top: 100px;
+    left: 0px;
+    width: 100%;
+    > div {
+      @include popup-content();
+      box-shadow: 0px 8px 20px rgba(0,0,0,.6);
+      margin-left: auto;
+      margin-right: auto;
+      width: 700px;
+      border: 1px solid #ddd;
+      > label {
+        margin: 8px;
+        > span {
+          @include icon-button();
+          font-size: 24px;
+          margin-right: 8px;
+        }
+        > * {
+          font-size: 24px;
+        }
+        > input {
+          width: auto;
+          margin: 8px;
+          width: 630px;
+          background: transparent;
+          border: transparent;
+          font-weight: 300;
+          color: #666;
+          outline: none;
+        }
+      }
+    }
+  }
+}
+
 div._systemStatus {
   opacity: 0;
   position: fixed;
