--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -37,7 +37,8 @@ body > ._search {
     width: 100%;
     > div {
       @include popup-content();
-      box-shadow: 0px 8px 20px rgba(0,0,0,.6);
+      background: rgba(245, 245, 245, 0.7);
+      box-shadow: 0px 20px 32px rgba(0,0,0,.45);
       margin-left: auto;
       margin-right: auto;
       width: 700px;
