--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -443,12 +443,12 @@ $indent:       24px;
             border:     4px solid #33b1ff;
             font-size:  16px;
             font-weight: 500;
-            &:first-child {
+            &:not(:last-child) {
               margin-right: 32px;
               background: #33b1ff;
               color:      white;
             }
-            &:last-child {
+            &:last-child:not(:first-child) {
               color:       #33b1ff;
               background:  white;
             }
