Refactoring of scrolling behaviour; interim checkpoint.

--- a/code/sass/ScheduleEntry.scss
+++ b/code/sass/ScheduleEntry.scss
@@ -251,16 +251,6 @@ $indent:       24px;
   }
 }
 
-._ReorganizeScheduleEntry {
-  @include schedule-entry (800px, 800px, 30px, 24px, 15px, 13px);
-  position: relative;
-  > ul > li > ul > li > ul li._list_line_categoryLine,
-  > ul > li > ul > div > li > ul li._list_line_categoryLine,
-  > ul > div > li > ul > li > ul li._list_line_categoryLine {
-    border-top: transparent;
-  }
-}
-
 ._MiniScheduleEntry {
   position: relative;
   @include schedule-entry-base();
@@ -369,6 +359,16 @@ $indent:       24px;
   }
 }
 
+._ReorganizeScheduleEntry {
+  @include schedule-entry (800px, 800px, 30px, 24px, 15px, 13px);
+  position: relative;
+  > ul > li > ul > li > ul li._list_line_categoryLine,
+  > ul > li > ul > div > li > ul li._list_line_categoryLine,
+  > ul > div > li > ul > li > ul li._list_line_categoryLine {
+    border-top: transparent;
+  }
+}
+
 ._IndexedListViewWithHead {
   > div._reorganizeButton {
     position: absolute;
@@ -386,17 +386,19 @@ $indent:       24px;
   > div._reorganizeCategoriesPopup {
     padding: 8px;
     position: fixed;
-    background: rgba(255,255,255,0)!important;
-    z-index: 6000;
+    background: transparent!important;
+    z-index: 1000;
     top:  118px;
     left: 208px;
     > div {
       @include popup-content();
+      background: transparent!important;
       height: calc(100vh - 144px);
-      width: 794px;
+      width: calc(100vw - 234px);
+      overflow-x: visible;
       > div {
-        width: 800px;
         height: calc(100vh - 144px);
+        width: calc(100vw - 228px);
       }
       > ._IndexedListView > ._list {
         margin-left: 0px;
