--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -257,122 +257,6 @@ body {
   }
 }
 
-._Organize {
-  > ._index {
-    > a {
-      padding-left:   $left-padding-left;
-      font-size:      $left-head-font-size;
-      font-weight:    100;
-      color:         $left-color;
-      text-decoration: none;
-      margin-bottom: 20px;
-      display: block;
-      &:first-child {
-        margin-top: 16px;
-      }
-      &:not(:first-child) {
-        margin-top: $tab-bar-height;
-      }
-    }
-  }
-  > ._list {
-    position: relative;
-    padding: 0px 12px;
-    width: auto;
-    ._heading {
-      font-size: 48px;
-      font-weight: 100;
-      margin-bottom: 24px;
-      &:not(:nth-child(1)) {
-        margin-top: 80px;
-      }
-      &:nth-child(1) {
-        margin-top: 20px + $tab-bar-height;
-      }
-    }
-    ._text {
-      font-size: 32px;
-      font-weight: 100;
-      margin-top: 16px;
-    }
-    > * {
-      margin-bottom: 32px;
-    }
-    table {
-      border-collapse: collapse;
-      padding: 0px 4px;
-      color: #222;
-      > thead > tr > th {
-        font-weight: 400;
-        font-size: 18px;
-        color: #444;
-      }
-      > tbody {
-        font-size: 13px;
-        color: #666;
-        border-top:   1px solid #aaa;
-        border-right: 1px dotted #aaa;
-        > tr {
-          &:nth-child(even) {
-            background-color: #f6f6f6;
-          }
-          border-bottom: 1px dotted #aaa;
-          > td {
-            border-left: 1px dotted #aaa;
-          }
-        }
-      }
-    }
-    table._parameters tbody {
-      td:nth-child(1) ._content, td:nth-child(2) ._content {
-        width: 96px;
-        text-align: right
-      }
-      td:nth-child(3) {
-        text-align: center
-      }
-    }
-    table._accounts tbody {
-      td:nth-child(7) ._content {
-        text-align: right;
-        width: 80px;
-      }
-      td:nth-child(3), td:nth-child(7) {
-        text-align: center;
-        color: red;
-      }
-      td:nth-child(9) ._content {
-        width: 50px;
-        text-align: right;
-      }
-    }
-    table._history tbody {
-      td:not(:nth-child(1)) ._content {
-        text-align: right;
-        width: 80px;
-      }
-    }
-    table._budgets tbody {
-      td:nth-child(2) ._content, td:nth-child(3) ._content {
-        width: 80px;
-      }
-      td:nth-child(4) {
-        text-align: center;
-      }
-      td:nth-child(9) ._content {
-        text-align: right;
-        width: 110px;
-      }
-    }
-    table._balances tbody {
-      td:not(:nth-child(1)) ._content {
-        text-align: right;
-        width: 80px;
-      }
-    }
-  }
-}
-
 div._budgetHistoryTables {
   position: relative;
 }
@@ -823,32 +707,26 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
 }
 
 ._IndexedListViewWithHead {
-  position: fixed;
-  //height:   calc(100vh - #{$tab-bar-height} -500px);
-  height: 500px;
-  top: $tab-bar-height;
-  width: 100%;
-  overflow: hidden;
   > ._index {
-    position: absolute;
+    position: fixed;
+    top: $tab-bar-height;
     height: 100%;
     overflow-y: scroll;
     &::-webkit-scrollbar { width: 0 !important }
-    //border-right: $left-border;
     box-shadow: 0px 0px 3px 0 rgba(0,0,0,0.3), 2px 0px 6px 0 rgba(0,0,0,0.1);
     width: $left-width;
-    //background-color: $left-background;
     background: $left-background;
   }
   > ._head {
+    position: fixed;
     background-color: $left-background;
-    //border-bottom: $left-border;
     box-shadow: 3px 0px 3px 0 rgba(0,0,0,0.3), 6px 2px 6px 0 rgba(0,0,0,0.1);
-    position: absolute;
+    top: $tab-bar-height;
     left: $left-width;
     width: calc(100% - 210px);
     height: 72px;
-    z-index: 1000;
+    z-index: 2001;
+    overflow: hidden;
     > ._budgetYearGraph {
       > div {
         display: inline-block;
@@ -869,14 +747,12 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
     }
   }
   > ._list {
-    position: relative;
-    margin-top: 72px;
+    margin-top: 140px;
     margin-left: $left-width;
-    height: calc(100% - 72px);
-    overflow-y: scroll;
     > ._ScheduleEntry > ul {
       padding-left: 4px;
     }
+    padding-bottom: 50px;
   }
 }
 
