Another stab at resolving scrolling issues.  Jquery can't correctly animate scrolling body element, so put scrolling on its child.

--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -1,13 +1,11 @@
 @import 'lib';
 
-html {
-  overflow: hidden;
-}
-
 body {
   margin: 0px;
-  overflow-y: scroll;
-  height: 100vh;
+  > .tabbed {
+    overflow-y: scroll;
+    height: 100vh;
+  }
 }
 
 body > div._blockEverything {
