--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -710,7 +710,7 @@ div._budgetMonthsGraph, div._budgetHistoryGraph, div._activityMonthsGraph, div._
   > ._index {
     position: fixed;
     top: $tab-bar-height;
-    height: 100%;
+    height: calc(100vh - #{$tab-bar-height});
     overflow-y: scroll;
     &::-webkit-scrollbar { width: 0 !important }
     box-shadow: 0px 0px 3px 0 rgba(0,0,0,0.3), 2px 0px 6px 0 rgba(0,0,0,0.1);
