Add transfer category to accounts.

--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -238,7 +238,7 @@ div._systemStatus {
             > ._field_creditBalance, ._field_rateType, ._field_paymentFrequency, ._field_taxType, ._field_taxTable {
               margin-top: 2px;
             }
-            > ._field_category, ._field_disCategory, ._field_intCategory, ._field_incCategory, ._field_liquid {
+            > ._field_category, ._field_disCategory, ._field_intCategory, ._field_incCategory, ._field_traCategory, ._field_liquid {
               margin-top: 4px;
               > div > ._content ._suffix {
                 padding-left: 6px;
