--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -5,7 +5,7 @@ body {
   > .tabbed {
     overflow-y: scroll;
     height: 100vh;
-    > .contents > div > div > div:not(._profileEdit):not(._preferencesEdit) {
+    > .contents > div > div > div {
       position: absolute;
       width: 100%;
     }
@@ -326,12 +326,8 @@ div._systemStatus {
 }
 
 ._preferencesEdit {
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  > ._group:first-child {
-    margin-top: 32px + $tab-bar-height;
-  }
+  width: 600px!important;
+  left: calc(50vw - 300px);
   > ._group {
     margin-top: 32px;
     margin-bottom: 32px;
@@ -370,13 +366,8 @@ div._systemStatus {
 }
 
 ._profileEdit {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 32px + $tab-bar-height
-
-
-;
+  width: 940px!important;
+  left: calc(50vw - 470px);
   > ._group {
     margin-top: 32px;
     margin-bottom: 32px;
