Change BudgetHUD to display yearly summary of actual / available for current year instead of budget (at top in comparison to previous year).

--- a/code/sass/budget.scss
+++ b/code/sass/budget.scss
@@ -150,6 +150,9 @@ body {
         margin-left: $icon-spacing;
       }
     }
+    > ._compare {
+      margin-bottom: -10px;
+    }
     ._graph_title {
       margin-top: 16px;
       margin-bottom: 4px;
