--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -835,3 +835,47 @@ body > ._preferences_menu_head {
 .plus-icon:before {
   content: "+";
 }
+
+body > ._getConfigEncryptionPassword {
+  z-index: 999999;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: white;
+  > div {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 6px;
+    border: 2px solid #80ceff;
+    width: 680px;
+    padding: 24px;
+    > div:first-child {
+      font-size: 22px;
+      color: #33b1ff;
+      margin-bottom: 20px;
+    }
+    > form {
+      > input {
+      font-size: 18px;
+      color: #888888;
+      }
+      > span {
+        margin-left: 20px;
+        font-size: 22px;
+        color: rgb(230, 46, 46);
+      }
+    }
+    > button {
+      margin-top: 20px;
+      border:     4px solid #33b1ff;
+      font-size:  16px;
+      font-weight: 500;
+      color:       white;
+      background:  #33b1ff;
+    }
+  }
+}
