--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -462,7 +462,7 @@ div._systemStatus {
         background: white;
         padding-left: 16px;
         padding-bottom: 12px;
-        > ._heading {
+        ._heading {
           padding-top: 6px;
           font-size: 28px;
           color: #33b1ff;
@@ -498,6 +498,15 @@ div._systemStatus {
             color:     #aaa;
           }
         }
+        > ._line > ._labeledField > ._readOnlyField {
+          padding: 4px;
+          border: solid 0.1px #ddd;
+          color: #444;
+        }
+        >._configTypeLine {
+          margin-top: 6px;
+          padding-bottom: 16px;
+        }
       }
     }
   }
@@ -513,10 +522,16 @@ div._systemStatus {
       border-radius: 6px;
       box-shadow: $drop-shadow;
       color: #555;
-      > div:first-child {
-        font-size: 22px;
+      > div:nth-child(1), > div:nth-child(3) {
         color: #33b1ff;
-        margin-bottom: 16px;
+        &:nth-child(1) {
+          font-size: 22px;
+          margin-bottom: 16px;
+        }
+        &:nth-child(3) {
+          font-size: 19px;
+          margin-top: 16px;
+        }
       }
       > form {
         margin-left: 16px;
@@ -534,6 +549,26 @@ div._systemStatus {
             vertical-align: top;
           }
         }
+        > ._dataStorageChoice {
+          margin-top: 8px;
+          > label > input:nth-child(3) {
+            margin-top: 0px;
+            margin-bottom: 0px;
+          }
+          > div {
+            font-size: 14px;
+            margin-top: 2px;
+            margin-left: 28px;
+            width: 400px;
+            color: rgb(136,170,136);
+            font-style: italic;
+          }
+         }
+      }
+      > ._errorMessage {
+        margin-top: 16px;
+        margin-bottom: 16px;
+        color: rgb(230, 46, 46);
       }
       > div:last-child {
         margin-top: 16px;
