--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -914,3 +914,27 @@ body > ._getConfigEncryptionPassword {
     }
   }
 }
+
+body > ._pleaseWait {
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(255,255,255,0.7);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
+  @supports not ((backdrop-filter: blur(25px)) or (-webkit-backdrop-filter: blur(25px))) {
+    background: rgba(255,255,255,0.94)!important;
+  }
+  > div {
+    font-size: 48px;
+    display: inline-block;
+    white-space: nowrap;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #33b1ff;
+  }
+}
