--- a/code/sass/ui.scss
+++ b/code/sass/ui.scss
@@ -595,15 +595,21 @@ div._systemStatus {
   margin-top: 80px;
   font-style: italic;
   color:       #33b1ff;
+  border-radius: 6px;
+  border: 2px solid #33b1ff;
+  width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 16px;
+  margin-bottom: 16px;
   > div {
     color: #1489cc;
-    font-size: 22px;
+    font-size: 23px;
   }
   > ul {
     margin-top: 18px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 820px;
+    margin-bottom: 0px;
+    margin-left: 30px;
     font-size: 20px;
     color:  #33b1ff;
     > li {
